# git-guardian

./: .gitignore  README.md  batch_scan_findings.json  dep_scan_results.json  git_guardian.db  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md
scripts/: batch_api_scan.py  dep_scan.py  dependency_scan.py  mass_scan.py  mega_scan.py  phase6_burn.py  ultra_burn.py
src/git_guardian/: __init__.py  cli.py  config.py
src/git_guardian/api/: app.py  deps.py
src/git_guardian/api/routes/: alerts.py  compare.py  dependencies.py  export.py  rate_limiter_route.py  scan.py  scheduler.py  web.py  (+2 more)
src/git_guardian/db/: database.py  models.py  watchlist_models.py
src/git_guardian/github/: bot.py
src/git_guardian/models/: package.py
src/git_guardian/scanner/: ai_analyzer.py  npm.py  patterns.py  rate_limiter.py  service.py  typosquat.py
src/git_guardian/services/: __init__.py  advisory_client.py  alert_service.py  comparison_service.py  deep_analyzer.py  dependency_scanner.py  export_service.py  health_scorer.py  license_scanner.py  lockfile_analyzer.py  malware_db.py  network_profiler.py  package_audit.py  report_service.py  sbom_service.py  scheduler_service.py  version_diff.py  watchlist_service.py
src/git_guardian/workers/: task_manager.py
tests/: test_alert_service.py  test_api.py  test_api_routes.py  test_cli.py  test_comparison.py  test_dependency_scanner.py  test_export_service.py  test_github_bot.py  test_npm.py  test_patterns.py  test_rate_limiter.py  test_scan.py  test_scheduler_service.py  test_service.py  test_typosquat.py  test_watchlist.py
(+7 files in other folders)
