[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-guardian"
version = "0.1.0"
description = "AI-powered supply chain security scanner for npm packages"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Patrick", email = "patrick@example.com" },
]

dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
    # Web platform
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
git-guardian = "git_guardian.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/git_guardian"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
